<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Ethernet</string>

    <string name="invalid_ip_address">请输入有效的IP地址</string>
    <string name="save_complete">保存成功！</string>
    <string name="settings_not_supported">对不起，该系统版本暂不支持以太网设置！</string>
    <string name="dns1_describe">DNS1</string>
    <string name="dns2_describe">DNS2</string>
    <string name="gateway_describe">Gateway</string>
    <string name="prefix_describe">Prefix length</string>

    <string name="wifi_ip_settings_invalid_ip_address" msgid="5228247770505105107">"请输入有效的IP地址"</string>
    <string name="wifi_ip_settings_invalid_gateway" msgid="3292444764474145026">"请输入有效的网关地址"</string>
    <string name="wifi_ip_settings_invalid_dns" msgid="6172189835428184828">"请输入有效的DNS地址"</string>
    <string name="wifi_ip_settings_invalid_network_prefix_length" msgid="6209978918929182270">"请输入长度介于0到32之间的网络前缀"</string>
    <string name="wifi_ip_address_description" msgid="6548838784556001283">"请输入有效的 IP 地址。\n示例：<xliff:g id="ID_1">192.168.1.128</xliff:g>"</string>
    <string name="wifi_dns1_description" msgid="2463500547232077393">"请输入有效的 IP 地址或留空。\n示例：<xliff:g id="ID_1">8.8.8.8</xliff:g>"</string>
    <string name="wifi_dns2_description" msgid="8005473174044015359">"请输入有效的 IP 地址或留空。\n示例：<xliff:g id="ID_1">8.8.4.4</xliff:g>"</string>
    <string name="wifi_gateway_description" msgid="4773751224452216231">"请输入有效的 IP 地址或留空。\n示例：<xliff:g id="ID_1">192.168.1.1</xliff:g>"</string>
    <string name="wifi_network_prefix_length_description" msgid="4849589333293194414">"请输入有效的网络前缀长度。\n示例：<xliff:g id="ID_1">24</xliff:g>"</string>
    <string name="proxy_error_invalid_host" msgid="3660415920668138953">"主机名无效"</string>
    <string name="proxy_error_invalid_exclusion_list" msgid="4921547051724987804">"此排除列表心无效。请输入用英文逗号分隔的排除网域列表。"</string>
    <string name="proxy_error_empty_port" msgid="6835658067776408062">"端口字段不能为空"</string>
    <string name="proxy_error_empty_host_set_port" msgid="4428793978424303244">"如果主机字段为空，请将端口字段也留空"</string>
    <string name="proxy_error_invalid_port" msgid="1434922103959603993">"端口无效"</string>
    <string name="proxy_warning_limited_support" msgid="6160239282535986523">"浏览器会使用HTTP代理，但其他应用不一定使用"</string>
    <string name="proxy_port_description" msgid="6791098212244367568">"请输入有效的端口。\n示例：<xliff:g id="ID_1">8080</xliff:g>"</string>
    <string name="proxy_exclusionlist_description" msgid="6020640103462473072">"请输入以英文逗号分隔的排除网域列表或留空。\n示例：<xliff:g id="ID_1">example.com,mycomp.test.com,localhost</xliff:g>"</string>
    <string name="proxy_hostname_description" msgid="5824391500254472447">"请输入有效的主机名。\n示例：<xliff:g id="ID_1">proxy.example.com</xliff:g>"</string>
    <string name="wifi_summary_title_connected" msgid="8329216588732277139">"已连接至网络"</string>
    <string name="wifi_summary_title_not_connected" msgid="3799548944869386251">"未连接到网络"</string>
    <string name="config">Configure Ethernet</string>
    <string name="connect_type">Connect Type</string>
    <string name="static_ip">Static IP</string>
    <string name="dhcp">DHCP</string>
    <string name="ip">IP address</string>
    <string name="network_prefix">Network prefix length</string>
    <string name="dns1">DNS1 address</string>
    <string name="dns2">DNS2 address</string>
    <string name="gateway">Gateway address</string>
    <string name="ok">OK</string>
</resources>
